# subagents_hooks

./: .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt  run.ps1
.github/agents/: sandbox-runner-rogue.agent.md  sandbox-runner.agent.md
.github/hooks/: eval_subagent.py  guard_pretooluse.py  hooks.json  log_event.py
docs/: PRD.md  architecture.md  contexto.md  flow.mermaid
sandbox/: README.md
sandbox/scripts/: fib.py
scaffold/: README.md  pyproject.toml
scaffold/src/agent_evals_scaffold/: __init__.py  cli.py
scaffold/src/agent_evals_scaffold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scaffold/src/agent_evals_scaffold/templates/: agent.agent.md.tmpl  eval_runner.py.tmpl  eval_subagent.py.tmpl  rogue.agent.md.tmpl  test_hooks_smoke.py.tmpl
scaffold/tests/: test_cli.py
tests/: conftest.py  test_eval_runner.py  test_eval_subagent.py  test_guard_pretooluse.py  test_log_event.py
